# Freiheit

./: .dockerignore  .gitignore  License  README.md  constants.py  docker-compose.yml  llm_with_nn_app.py  main_NN_LLM.py  main_llm.py  pyproject.toml  requirements.txt
data/02_processed/: embeddings_and_distances.npz
data/03_models/distanceNN/: best_model_MSE.pt  pred_test_set.npz  trn_val_loss.npz
legacy/: README.md  llm_app.py
model/: best_model_MSE.pt
model/dinov2_model/: config.json
src/: constants.py  data_processing_utils.py  distanceNN_utils.py  gui_utils.py  llm_utils.py
src/backend/: backend.Dockerfile  main.py
src/data/: preprocessor.py
src/frontend/: app.py  frontend.Dockerfile
src/models/distanceNN/: distanceNN.py  evaluate_NN.py  run_distanceNN_pipeline.py  train_NN.py
src/models/llm/: llm.py
src/utils/: distanceNN_utils.py  gui_utils.py  image_processing_utils.py  llm_utils.py  voice_utils.py
src/visualisation/: plot_results_distanceNN.py
test/: test_distanceNN.py
