[project]
name = "freiheit"
version = "0.1.0"
description = "An Application designed to assist people with low vision and blindness"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi>=0.129.0",
    "faster-whisper>=1.2.1",
    "gtts>=2.5.4",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "numpy==1.26.4",
    "onnxruntime==1.19.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "streamlit==1.40.0",
    "streamlit-javascript>=0.1.5",
    "tornado>=6.5.5",
    "uvicorn>=0.41.0",
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]
